--- a/public/css/base/variables.css
+++ b/public/css/base/variables.css
@@ -1,18 +1,3 @@
-/* Base */
-@import './base/variables.css';
-@import './base/reset.css';
-
-/* Layout */
-@import './layout/grid.css';
-@import './layout/nav.css';
-
-/* Components */
-@import './components/button.css';
-@import './components/input.css';
-@import './components/card.css';
-@import './components/team.css';
-
-/* 디자인 토큰과 레이아웃을 위한 CSS 변수들 */
 :root {
   /* 색상 */
   --color-dark-1: #1e1e1e;
@@ -49,14 +34,13 @@
   /* 레이아웃 크기 */
   --nav-width: 200px;
   --main-width: 1fr;
-  --sidebar-width: 320px; /* 오른쪽 패널을 고정 폭으로 늘림 */
+  --sidebar-width: 320px;
   --header-height: 3rem;
   --section-padding: 1rem;
-}
 
-/* 전역 리셋 */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  /* z-index 레이어 */
+  --z-base: 1;
+  --z-dropdown: 10;
+  --z-modal: 100;
+  --z-tooltip: 1000;
 } 
