--- a/public/css/base/reset.css
+++ b/public/css/base/reset.css
@@ -12,6 +12,7 @@ body {
   color: var(--color-light);
   line-height: 1.5;
   font-size: var(--text-base);
+  overflow-y: hidden;
 }
 
 /* 웹 컴포넌트 관련 스타일 */
